--- a/meta.yaml
+++ b/meta.yaml
@@ -1,7 +1,18 @@
 package:
  name: t_sne_bhcuda
- version: 0.1.0
+ version: 0.1.2
 
 
+
+source:
+ fn: t_sne_bhcuda-0.1.2.zip
+ md5: fe9022dd7f14c7037cfc88bd2cf30aee
+ url: https://pypi.python.org/packages/source/t/t_sne_bhcuda/t_sne_bhcuda-0.1.2.zip
+
+requirements:
+ build:
+  - python
+ run:
+  - python
 
 
